--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -204,8 +204,9 @@
                 <ul>
                     <li><strong>Paper submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
                     <li><strong>Paper notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
-                    <li><strong>Paper camera-ready:</strong> April 26th, 2024</li>
-                    <li><strong>Early registration deadline:</strong> May 5th, 2024</li>
+                    <li><strong>Early registration deadline:</strong> <s style="color: #BEBEBE;">April 26th, 2024</s></li>
+                    <li><strong>Paper camera-ready:</strong> May 5th, 2024</li>
+                    <li><strong>Workshop:</strong> June 21st, 2024</li>
                   </ul>
                   
             </div>
