--- a/program.html
+++ b/program.html
@@ -35,7 +35,7 @@
     <link href="assets/css/general_style.css" rel="stylesheet">
     <link href="assets/css/navbar_style.css" rel="stylesheet">
     <link href="assets/css/footer_style.css" rel="stylesheet">
-    <link href="assets/css/calls_style.css" rel="stylesheet">
+    <link href="assets/css/program_style.css" rel="stylesheet">
 
     <link rel="icon" href="assets/img/secute-logo.png">
 </head>
@@ -63,15 +63,61 @@
     </div>
 </header>
 <!--------------------------------- END NAVBAR --------------------------------------------------->
-<section id="calls_info" class="d-flex align-items-center">
+<section id="program" class="d-flex align-items-center">
 
     <div class="container">
         <div class="row class-container">
             <h2> <i class="bi bi-pencil-square"></i> Program </h2>
         </div>
 
-        <div class="row class-container align-items-center grey" style="background-color: #dbf5d5">
-            <p style="font-size: 22px;"> <i class="bi bi-hourglass"></i> Coming soon... </p>
+        <div class="row class-container align-items-center">
+            <!--<p style="font-size: 22px;"> <i class="bi bi-hourglass"></i> Coming soon... </p>-->
+            <table>
+                <tr>
+                    <th class="col-date">Date</th>
+                    <th class="col-time">Time</th>
+                    <th class="col-event">Event</th>
+                </tr>
+                <tr>
+                    <td rowspan="6" style="padding-top: 10%"><i class="icon bi bi-calendar"></i> 21 June, 2024
+                        <br><a href="https://www.google.com/maps/dir//Lungomare+Clemente+Tafuri,+1,+84127+Salerno+SA/@40.6743443,14.7707259,14.27z/data=!4m8!4m7!1m0!1m5!1m1!1s0x133bc246d5b3550b:0x14eeac8b514c5197!2m2!1d14.7758765!2d40.6725135?hl=it&entry=ttu" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Grand Hotel, Salerno </strong></a></td>
+                    <td class><i class="icon bi bi-clock"></i> 09:00 - 09:15</td>
+                    <td><i class="icon bi bi-people"></i> Welcome from the Organizers</td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 09:15 - 10:30</td>
+                    <td><i class="icon bi bi-mic"></i> Keynote - <b><i>TBD SPEAKER</i></b><br><b><i>TBD TITLE</i></b><br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
+                        Abstract
+                    </button>
+
+                        <div class="collapse abstract" id="collapse_2">
+                            <i>TBD</i>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 10:30 - 11:00</td>
+                    <td><i class="icon bi bi-cup-hot"></i> Coffee Break</td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 11:00 - 12:20</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session</i></b> — 4 papers <br>
+                        <ul>
+                            <li>(<i>TBD</i>) - Paper 1</li>
+                            <li>(<i>TBD</i>) - Paper 2</li>
+                            <li>(<i>TBD</i>) - Paper 3</li>
+                            <li>(<i>TBD</i>) - Paper 4</li>
+                    </td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 12:20 - 12:30</td>
+                    <td><i class="icon bi bi-arrow-counterclockwise"></i> Wrap up and closing</td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 12:30</td>
+                    <td><i class="icon bi bi-stop-circle"></i> Lunch Break</td>
+                </tr>
+            </table>
         </div>
     </div>
 </section>
