--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -205,7 +205,7 @@
                     <li><strong>Paper submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
                     <li><strong>Paper notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
                     <li><strong>Early registration deadline:</strong> <s style="color: #BEBEBE;">April 26th, 2024</s></li>
-                    <li><strong>Paper camera-ready:</strong> May 5th, 2024</li>
+                    <li><strong>Paper camera-ready:</strong> <s style="color: #BEBEBE;">May 5th, 2024</s></li>
                     <li><strong>Workshop:</strong> June 21st, 2024</li>
                   </ul>
                   
