--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">April 26th, 2024</s></h3>
                             <p>Early registration deadline</p>
                         </div>
-                        <div class="date next-date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
-                            <h3>May 5th, 2024</h3>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3><s style="color: #BEBEBE;">May 5th, 2024</s></h3>
                             <p>Paper camera ready</p>
                         </div>
-                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
                             <h3>June 21st, 2024</h3>
                             <p>Workshop</p>
                         </div>
