--- a/program.html
+++ b/program.html
@@ -79,43 +79,65 @@
                     <th class="col-event">Event</th>
                 </tr>
                 <tr>
-                    <td rowspan="6" style="padding-top: 10%"><i class="icon bi bi-calendar"></i> 21 June, 2024
+                    <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> 21 June, 2024
                         <br><a href="https://www.google.com/maps/dir//Lungomare+Clemente+Tafuri,+1,+84127+Salerno+SA/@40.6743443,14.7707259,14.27z/data=!4m8!4m7!1m0!1m5!1m1!1s0x133bc246d5b3550b:0x14eeac8b514c5197!2m2!1d14.7758765!2d40.6725135?hl=it&entry=ttu" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Grand Hotel, Salerno </strong></a></td>
-                    <td class><i class="icon bi bi-clock"></i> 09:00 - 09:15</td>
+                    <td class><i class="icon bi bi-clock"></i> 14:00 - 14:10</td>
                     <td><i class="icon bi bi-people"></i> Welcome from the Organizers</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 09:15 - 10:30</td>
-                    <td><i class="icon bi bi-mic"></i> Keynote - <b><i>TBD SPEAKER</i></b><br><b><i>TBD TITLE</i></b><br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
-                        Abstract
-                    </button>
-
-                        <div class="collapse abstract" id="collapse_2">
-                            <i>TBD</i>
+                    <td><i class="icon bi bi-clock"></i> 14:10 - 15:10</td>
+                    <td><i class="icon bi bi-mic"></i> Keynote <br>
+                        <div id="keynote_title"><img id="keynote_pic" src="assets/img/placeholder.png">
+                            <div id="keynote_name"><b><i style="font-size:18px"><a href="https://mpapad.github.io/" target="_blank">Mike Papadakis</a></i></b>
+                            | Luxembourg University, Interdisciplinary Centre for Security, Reliability and Trust (SnT)
+                                <br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
+                                    Bio
+                                </button>
+                            </div>
                         </div>
+                        <div class="collapse abstract" id="collapse_2">
+                            <!--<p>Prof. <b>Mike Papadakis</b> is an Associate Professor at the Luxembourg University, Interdisciplinary Centre for Security, Reliability and Trust (SnT).
+                                His research interests lie in the area of Software Engineering with particular focus on Software Testing, Code Analysis and Search-based Software Engineering.
+                                He is best known for his work on Mutation Testing for which he has been awarded IEEE TCSE Rising Star Award 2020.
+                                He is General Chair of ACM SIGSOFT ISSTA 2025, has been General Chair of IEEE ICSME 2021 and Program Chair of ICST 2023, ICST 2022 and SSBSE 2021.
+                                He also serves at the editorial and review boards of international Software Engineering journals (STVR) and has (co-)authored more than 100 publications in international peer-reviewed conferences and journals.
+                                His work has been supported by Facebook, FNR, CETREL (SIX group company), BGL (BNP Paribas), Microsoft and PayPal.</p>-->
+                            <p>TBD</p>
+                        </div>
+                        <br><b><i>TBD TITLE</i></b>
+                        <br><i>TBD ABSTRACT</i><br>
+
                     </td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 10:30 - 11:00</td>
+                    <td><i class="icon bi bi-clock"></i> 15:10 - 15:30</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #1</i></b> — 1 paper <br>
+                        <ul>
+                            <li>15:10-15:30 — <i>"Semgrep*: Improving the Limited Performance of Static Application Security Testing (SAST) Tools"</i>, G. Bennett et al.</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td><i class="icon bi bi-clock"></i> 15:30 - 16:00</td>
                     <td><i class="icon bi bi-cup-hot"></i> Coffee Break</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 11:00 - 12:20</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session</i></b> — 4 papers <br>
+                    <td><i class="icon bi bi-clock"></i> 16:00 - 16:50</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 3 papers <br>
                         <ul>
-                            <li>(<i>TBD</i>) - Paper 1</li>
-                            <li>(<i>TBD</i>) - Paper 2</li>
-                            <li>(<i>TBD</i>) - Paper 3</li>
-                            <li>(<i>TBD</i>) - Paper 4</li>
+                            <li>16:00-16:15 — <i>"Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic"</i>, D. La Gamba et al.</li>
+                            <li>16:15-16:35 — <i>"Security Risk Assessment on Cloud: A Systematic Mapping Study"</i>, G. Annunziata et al.</li>
+                            <li>16:35-16:50 — <i>"LLM Security Guard for Code"</i>, A. Kavian et al.</li>
+                        </ul>
                     </td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 12:20 - 12:30</td>
-                    <td><i class="icon bi bi-arrow-counterclockwise"></i> Wrap up and closing</td>
+                    <td><i class="icon bi bi-clock"></i> 16:50 - 17:25</td>
+                    <td><i class="icon bi bi-chat-dots"></i> Open Discussion</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 12:30</td>
-                    <td><i class="icon bi bi-stop-circle"></i> Lunch Break</td>
+                    <td><i class="icon bi bi-clock"></i> 17:25 - 17:30</td>
+                    <td><i class="icon bi bi-stop-circle"></i> Closing</td>
                 </tr>
             </table>
         </div>
