--- a/program.html
+++ b/program.html
@@ -89,7 +89,7 @@
                     <td><i class="icon bi bi-mic"></i> Keynote <br>
                         <div id="keynote_title"><img id="keynote_pic" src="assets/img/placeholder.png">
                             <div id="keynote_name"><b><i style="font-size:18px"><a href="https://mpapad.github.io/" target="_blank">Mike Papadakis</a></i></b>
-                            | Luxembourg University, Interdisciplinary Centre for Security, Reliability and Trust (SnT)
+                            | University of Luxembourg, Interdisciplinary Centre for Security, Reliability and Trust (SnT)
                                 <br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
                                     Bio
                                 </button>
