Keynote info update

--- a/program.html
+++ b/program.html
@@ -87,7 +87,7 @@
                 <tr>
                     <td><i class="icon bi bi-clock"></i> 14:05 - 15:05</td>
                     <td><i class="icon bi bi-mic"></i> Keynote <br>
-                        <div id="keynote_title"><img id="keynote_pic" src="assets/img/placeholder.png">
+                        <div id="keynote_title"><img id="keynote_pic" src="assets/img/mike.jpg">
                             <div id="keynote_name"><b><i style="font-size:18px"><a href="https://mpapad.github.io/" target="_blank">Mike Papadakis</a></i></b>
                             | University of Luxembourg, Interdisciplinary Centre for Security, Reliability and Trust (SnT)
                                 <br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
@@ -96,16 +96,19 @@
                             </div>
                         </div>
                         <div class="collapse abstract" id="collapse_2">
-                            <!--<p>Prof. <b>Mike Papadakis</b> is an Associate Professor at the Luxembourg University, Interdisciplinary Centre for Security, Reliability and Trust (SnT).
-                                His research interests lie in the area of Software Engineering with particular focus on Software Testing, Code Analysis and Search-based Software Engineering.
-                                He is best known for his work on Mutation Testing for which he has been awarded IEEE TCSE Rising Star Award 2020.
-                                He is General Chair of ACM SIGSOFT ISSTA 2025, has been General Chair of IEEE ICSME 2021 and Program Chair of ICST 2023, ICST 2022 and SSBSE 2021.
-                                He also serves at the editorial and review boards of international Software Engineering journals (STVR) and has (co-)authored more than 100 publications in international peer-reviewed conferences and journals.
-                                His work has been supported by Facebook, FNR, CETREL (SIX group company), BGL (BNP Paribas), Microsoft and PayPal.</p>-->
-                            <p>TBD</p>
+                            <p><b>Mike Papadakis</b> is an Associate Professor at the University of Luxembourg where he leads the SERVAL (SEcurity, Reasoning and VALidation) research team.
+                                His research interests include software testing, code analysis and artificial inteligence for software engineering. He is best known for his work on Mutation
+                                Testing for which he has been awarded IEEE TCSE Rising Star Award 2020. He has been General Chair of the ACM SIGSOFT ISSTA 2025 and IEEE ICSME 2021 and Program
+                                Chair of SSBSE 2022 and IEEE ICST 2023. He also serves at the editorial and review boards of international Software Engineering journals (STVR, Empirical
+                                Software Engineering, ACM Transactions on Software Engineering and Methodology) and has co-authored of more than 100 publications in international peer-reviewed
+                                conferences and journals. His work has been supported by Facebook, FNR, CETREL (SIX group company), BGL (BNP Paribas), Microsoft and PayPal.</p>
                         </div>
-                        <br><b><i>TBD TITLE</i></b>
-                        <br><i>TBD ABSTRACT</i><br>
+                        <br><b><i>A Tale of Vulnerability Prediction</i></b>
+                        <br><p>Over the past years, automated vulnerability prediction research, mainly supported by AI techniques, has grown in popularity.
+                            While a large number of studies have been proposed, they often make simplification assumptions, which limit their applicability and adoption. This talk will provide a
+                            historical view of the vulnerability prediction approaches and will focus on the challenges and limitation that they face through the lens of three different research
+                            communities, i.e., AI, SE and Security. The talk will conclude with a discussion on the links between vulnerability prediction and testing, showing potential applications
+                            and cross-fertilization between the two research fields.</p><br>
 
                     </td>
                 </tr>
