--- a/program.html
+++ b/program.html
@@ -81,11 +81,11 @@
                 <tr>
                     <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> 21 June, 2024
                         <br><a href="https://www.google.com/maps/dir//Lungomare+Clemente+Tafuri,+1,+84127+Salerno+SA/@40.6743443,14.7707259,14.27z/data=!4m8!4m7!1m0!1m5!1m1!1s0x133bc246d5b3550b:0x14eeac8b514c5197!2m2!1d14.7758765!2d40.6725135?hl=it&entry=ttu" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Grand Hotel, Salerno </strong></a></td>
-                    <td class><i class="icon bi bi-clock"></i> 14:00 - 14:05</td>
+                    <td class><i class="icon bi bi-clock"></i> 14:00 - 14:10</td>
                     <td><i class="icon bi bi-people"></i> Welcome from the Organizers</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 14:05 - 15:05</td>
+                    <td><i class="icon bi bi-clock"></i> 14:10 - 15:15</td>
                     <td><i class="icon bi bi-mic"></i> Keynote <br>
                         <div id="keynote_title"><img id="keynote_pic" src="assets/img/mike.jpg">
                             <div id="keynote_name"><b><i style="font-size:18px"><a href="https://mpapad.github.io/" target="_blank">Mike Papadakis</a></i></b>
@@ -113,11 +113,11 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 15:05 - 15:30</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #1</i></b> — 2 papers <br>
+                    <td><i class="icon bi bi-clock"></i> 15:15 - 15:30</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #1</i></b> — 1 paper <br>
                         <ul>
-                            <li>15:05-15:20 — <i>"Semgrep*: Improving the Limited Performance of Static Application Security Testing (SAST) Tools"</i>, G. Bennett et al.</li>
-                            <li>15:20-15:30 — <i>"Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic"</i>, D. La Gamba et al.</li>
+                            <li>15:15-15:30 — <i>"Security Risk Assessment on Cloud: A Systematic Mapping Study"</i>, G. Annunziata et al.</li>
+                            
                         </ul>
                     </td>
                 </tr>
@@ -126,20 +126,21 @@
                     <td><i class="icon bi bi-cup-hot"></i> Coffee Break</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 16:00 - 16:25</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 2 papers <br>
+                    <td><i class="icon bi bi-clock"></i> 16:00 - 16:35</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 3 papers <br>
                         <ul>
-                            <li>16:00-16:15 — <i>"Security Risk Assessment on Cloud: A Systematic Mapping Study"</i>, G. Annunziata et al.</li>
-                            <li>16:15-16:25 — <i>"LLM Security Guard for Code"</i>, A. Kavian et al.</li>
+                            <li>16:00-16:15 — <i>"Semgrep*: Improving the Limited Performance of Static Application Security Testing (SAST) Tools"</i>, G. Bennett et al.</li>
+                            <li>16:15-16:25 — <i>"Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic"</i>, D. La Gamba et al.</li>
+                            <li>16:25-16:35 — <i>"LLM Security Guard for Code"</i>, A. Kavian et al.</li>
                         </ul>
                     </td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 16:25 - 16:40</td>
+                    <td><i class="icon bi bi-clock"></i> 16:35 - 17:20</td>
                     <td><i class="icon bi bi-chat-dots"></i> Open Discussion</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 16:40 - 16:45</td>
+                    <td><i class="icon bi bi-clock"></i> 17:20 - 17:30</td>
                     <td><i class="icon bi bi-stop-circle"></i> Closing</td>
                 </tr>
             </table>
