--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
                     <div><img src="assets/img/secute-logo.png" class="img-fluid col-lg-4 rounded mx-auto d-block"
                               data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
-                    <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">SECUTE 2024</h1>
-                    <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 1st Workshop on Security Testing for Complex Software Systems</h2>
-                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">Jun 21, 2024 - Salerno, Italy</h2>
-                    <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800"> Co-located with <a href="https://conf.researchr.org/home/ease-2024">EASE 2024</a></h3>
+                    <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">MSR4P&S 2025</h1>
+                    <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security</h2>
+                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">March 4, 2025 - Montreal, Canada</h2>
+                    <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800"> Co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a></h3>
                 </div>
             </div>
         </div>
