--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
 
         <div class="container">
             <div class="row about-container">
-                <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Motivation </h2>
-                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> In the past two decades, the complexity of modern IT systems has
+                <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Workshop Theme and Goals </h2>
+                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> 
+                    The last decades have put Privacy and Security (P&S) in the spotlight of information technology as data breaches and cyberattacks have spiked globally. Still, P&S are often afterthoughts in software development as their benefits are sometimes difficult to demonstrate and their costs hard to justify. However, such technical debt is becoming hard to sustain as new legal frameworks, such as the EU General Data Protection Regulation (GDPR), demand companies to incorporate P&S features (e.g., transparency, anonymity, and informed consent) at the core of their products. Hence, there is an urgent call for tools and methods supporting the elicitation and deployment of P&S requirements in a by-design approach.</br>
+
+P&S are multifaceted and complex research areas spanning across different knowledge domains (e.g., engineering, law, and psychology). Challenges in P&S cannot be solely addressed from a single discipline as they often involve human factors, technological artefacts, and regulatory/legal frameworks. Particularly, the quest for P&S solutions requires in-deep knowledge and actionable information about its users/stakeholders, vulnerabilities/flaws, and potential attackers.</br>
+
+Mining Software Repositories (MSR) techniques can support this quest by providing means to understand the P&S dimensions of information systems, thus help shaping privacy- and security-friendly software. This workshop aims to explore the application of MSR at the different stages of P&S engineering.</p>
+                    
+                    <!--In the past two decades, the complexity of modern IT systems has
                     surged due to technologies like AI, cloud computing, and microservices. Ensuring security in these systems is challenging. Software security is critical for practitioners
                     to prevent incidents such as data breaches.</br>
 
@@ -99,12 +106,12 @@
 
                     To address these gaps, <b style="color: rgb(48, 86, 175)">SECUTE is a workshop focusing on empirical methods for testing the security of complex software systems</b> to understand the support they provide
                     to practitioners in dealing with security, particularly in unconventional domains. SECUTE aims to foster a community for sharing ideas and initiating collaborations
-                    among researchers in this field. </p>
+                    among researchers in this field. </p> -->
             </div>
             <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Where and When? </h3>
-                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 1st Workshop on Security Testing for Complex Software Systems
-                    will be held at Salerno, Italy, co-located with <a href="https://conf.researchr.org/home/ease-2024">EASE 2024</a>. </h4>
+                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
+                    will be held in Motreal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
         </div>
 
