--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
 
             <div id="twitter">
                 <h2> Twitter </h2>
-                <a class="twitter-timeline" data-tweet-limit="2" href="https://x.com/MSR4PSworkshop">Tweets by MSR4P&S Workshop</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" href="https://twitter.com/MSR4PSworkshop?ref_src=twsrc%5Etfw">Tweets by MSR4PSworkshop</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>                
             </div>
         </div>
 
