--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link href="assets/css/home_style.css" rel="stylesheet">
     <link href="assets/css/footer_style.css" rel="stylesheet">
 
-    <link rel="icon" href="assets/img/secute-logo.png">
+    <link rel="icon" href="assets/img/msr4ps/msrpslogo.png">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
             <div class="d-flex">
-            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
+            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/msr4ps/msrpslogo.png" alt="" class="img-fluid"></a>
             <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
             </div>
 
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
-                    <div><img src="assets/img/secute-logo.png" class="img-fluid col-lg-4 rounded mx-auto d-block"
+                    <div><img src="assets/img/msr4ps/msrpslogo.png" class="img-fluid col-lg-4 rounded mx-auto d-block"
                               data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
                     <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">MSR4P&S 2025</h1>
                     <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security</h2>
