--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -73,6 +73,25 @@
         <div class="row class-container">
             <h2> <i class="bi bi-bell"></i> Call for Papers </h2>
             <div class="grey" data-aos="fade-right" data-aos-delay="200" data-aos-duration="500">
+                <p>We invite MSR researchers and practitioners across multiple disciplines and knowledge backgrounds to submit contributions dealing with the following (or related) topics:</p>
+                <ul>
+                    <li> MSR applications for security risk assessment.
+                    <li> MSR applications for privacy requirements engineering.
+                    <li> MSR applications for security vulnerabilities detection.
+                    <li> Engineering PETs through MSR methodologies.
+                    <li> Privacy-Enhancing Technologies through MSR.
+                    <li> MSR-based research for safety/security by design.
+                    <li> Privacy-friendly MSRs (including mixed-methods).
+                    <li> MSR-based mixed-methods on P&S research.
+                    <li> Privacy requirements in MSR-based research.
+                    <li> Integrating MSRs into P&S research (empirical).
+                    <li> Analysis of repositories to mine for P&S research.
+                    <li> Tools supporting MSR-based research for P&S.
+                    <li> Datasets used for MSR-based research for P&S.
+                    <li> MSR applications to P&S assurance.
+                </ul>
+                
+                <!--
                 <p> The 1st edition of the <b style="color: rgb(48, 86, 175)">Security Testing for Complex 
                     Software Systems (SECUTE)</b> workshop aims to provide a forum for researchers and practitioners to present and discuss empirical research on security testing.</br>
                     We expect that the workshop will help to: </p>
@@ -83,6 +102,9 @@
                     <li> Encouraging participants to share their experiences and insights regarding challenges faced in dealing with security in real-world complex systems. </li>
                     <li> Developing a roadmap for future research directions on the matter. </li>
                 </ul>
+                -->
+
+                
             </div>
         </div>
 
