--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -73,6 +73,7 @@
         <div class="row class-container">
             <h2> <i class="bi bi-bell"></i> Call for Papers </h2>
             <div class="grey" data-aos="fade-right" data-aos-delay="200" data-aos-duration="500">
+                <h3> Topics of interest </h3>
                 <p>We invite MSR researchers and practitioners across multiple disciplines and knowledge backgrounds to submit contributions dealing with the following (or related) topics:</p>
                 <ul>
                     <li> MSR applications for security risk assessment.
