--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>SECUTE 2024</title>
+    <title>MSR4P&S 2025</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -39,7 +39,7 @@
     <link href="assets/css/calls_style.css" rel="stylesheet">
     <link href="assets/css/footer_style.css" rel="stylesheet">
 
-    <link rel="icon" href="assets/img/secute-logo.png">
+    <link rel="icon" href="assets/img/msr4ps/msr4pslogo.png">
 </head>
 <body>
 
