--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -110,7 +110,9 @@
         </div>
 
         <div class="row class-container white"  id="topics" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
-            <h3> Topics of interest </h3>
+            <h4> Topics of interest </h4>
+            <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for the security and privacy assessment of generative Artificial Intelligence (AI) models (e.g., GPT-3 and GitHub Copilot) and their impact on modern software engineering processes.</p>
+            <!--
             <p> <b style="color: rgb(48, 86, 175)">Topics of interest</b> include, but are not limited to, the following:</p>
             <ul>
                 <li>Studies on the effectiveness of security testing in complex architectures and systems, e.g., AI-enabled, cyber-physical, IoT, and Virtual Reality systems.</li>
@@ -157,6 +159,7 @@
                 </div>
             </div>
             <p> SECUTE also welcomes studies with negative findings or nonsignificant results.</p>
+            -->
         </div>
         <div class="row aclass-container">
             <div class="grey" data-aos="fade-right" data-aos-delay="400" data-aos-duration="500">
