--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -91,6 +91,9 @@
                     <li> Datasets used for MSR-based research for P&S.
                     <li> MSR applications to P&S assurance.
                 </ul>
+                <h4> Special Topic of Interest </h4>
+                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for the security and privacy assessment of generative Artificial Intelligence (AI) models (e.g., GPT-3 and GitHub Copilot) and their impact on modern software engineering processes.</p>
+           
                 
                 <!--
                 <p> The 1st edition of the <b style="color: rgb(48, 86, 175)">Security Testing for Complex 
@@ -109,10 +112,7 @@
             </div>
         </div>
 
-        <div class="row class-container white"  id="topics" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
-            <h4> Topics of interest </h4>
-            <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for the security and privacy assessment of generative Artificial Intelligence (AI) models (e.g., GPT-3 and GitHub Copilot) and their impact on modern software engineering processes.</p>
-            <!--
+        <div class="row class-container white"  id="topics" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800"> <!--
             <p> <b style="color: rgb(48, 86, 175)">Topics of interest</b> include, but are not limited to, the following:</p>
             <ul>
                 <li>Studies on the effectiveness of security testing in complex architectures and systems, e.g., AI-enabled, cyber-physical, IoT, and Virtual Reality systems.</li>
