--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -47,8 +47,8 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
-        <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
-        <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
+        <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/msr4ps/msr4pslogo.png" alt="" class="img-fluid"></a>
+        <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
